ipfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs-microservice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ipfs-microservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipfs-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ipfs-microservice
  template:
    metadata:
      labels:
        app: ipfs-microservice
    spec:
      containers:
        - name: ipfs-microservice
          image: mbondi/ipfs:latest
          ports:
            - containerPort: 3000
