ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipfs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ipfs.collectible.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipfs-microservice
                port:
                  number: 80
